# lurch

./: .gitignore  INSTALL  Makefile.in  README.md  configure  configure.ac  opam.in
db/: backup  create  populate  populate.sql  schema.sql
docker/: Dockerfile  Dockerfile-docker-in-docker  lighttpd.conf  start
examples/: lighttpd.conf
src/: LurchApiTypes.ml  LurchClient.ml  LurchClientCommand.ml  LurchClientLib.ml  LurchClientProgram.ml  LurchClientState.ml  LurchClientViews.ml  LurchCommandLanguage.ml  LurchServer.ml  LurchServerCGroup.ml  LurchServerChroot.ml  LurchServerCommand.ml  LurchServerDb.ml  LurchServerDocker.ml  LurchServerFiles.ml  LurchServerHttpd.ml  LurchServerLib.ml  LurchServerSecrets.ml  LurchVersion.ml.in
tests/: get_program_1.exp  list_past_runs_1.exp  list_programs_1.exp  queries  save_program_1.exp  start_program_1.exp
www/: index.html  main.css  run-lurch
